# VitalCore

./: .coveragerc  .dockerignore  .env.complete.template  .env.example  .env.production  .env.production.template  .env.secure  .env.template  .env.test  .gitignore  Dockerfile  Dockerfile.gemma  Dockerfile.light  Dockerfile.ner  Dockerfile.whisper  Makefile  README.md  RTX2070-README.txt  add_missing_tables.py  add_patient_fields.sql  add_profile_data_column.py  alembic.ini  api_test_results_20250722_013307.json  apply_migration.py  backend_fixes_results_20250719_145118.json  check_audit_constraints.py  check_columns.py  check_database_tables.py  check_db_simple.py  check_required_cols.py  check_route_structure.py  check_users.py  check_users_detailed.py  complete_database_fix.py  complete_system_test_results.json  complete_test_suite_100_percent.py  comprehensive_audit_fix.py  comprehensive_security_test.py  continuous_api_monitor.py  create_admin_user.py  (+124 more)
.github/: PIPELINE_SAFETY_GUIDE.md  WORKFLOW_VERSION
alembic/: env.py
app/: main.py
config/: lora_training_config.yaml
diagnostic_scripts/: Check-SystemHealth-Fixed.ps1  Check-SystemHealth.ps1  README.md  Start-Services-Fixed.ps1  Start-Services.ps1  Test-ApiEndpoints-Fixed.ps1  Test-ApiEndpoints.ps1  api_test_report_20250720_001826.json  api_test_report_20250720_002528.json  api_test_report_20250720_003227.json  api_test_report_20250720_004422.json  api_test_report_20250720_005133.json  api_test_report_20250720_005419.json  api_test_report_20250720_010132.json  api_test_report_20250720_010505.json  api_test_report_20250720_040727.json  api_test_report_20250720_041436.json  api_test_report_20250720_044214.json  api_test_report_20250720_050232.json  api_test_report_20250720_050810.json  api_test_report_20250720_050816.json  api_test_report_20250720_050836.json  api_test_report_20250720_050850.json  api_test_report_20250720_051541.json  api_test_report_20250720_051817.json  api_test_report_20250720_051858.json  api_test_report_20250720_052238.json  api_test_report_20250720_055245.json  api_test_report_20250720_055254.json  api_test_report_20250720_125946.json  api_test_report_20250720_130337.json  api_test_report_20250720_130520.json  api_test_report_20250720_131052.json  api_test_report_20250720_140016.json  api_test_report_20250720_171929.json  check_system_health.py  test_api_endpoints.py
docs/: ASYNC_CONNECTION_CLEANUP_FIXES.md  ENTERPRISE_COMPLIANCE_FIXES.md  FRONTEND_INTEGRATION_PLAN.md  SOC2_AUDIT_ARCHITECTURE.md  junior_dev_implementation_guide.md  phi_security_layers_analysis.md
frontend/: .env.docker  .eslintrc.json  DASHBOARD_ARCHITECTURE_PLAN.md  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.docker.ts  vite.config.ts
k8s/: enterprise-architecture-design.md
monitoring/: deploy-monitoring.ps1  docker-compose.monitoring-only.yml  docker-compose.monitoring.yml  fix-and-deploy.ps1  fix-configs.ps1  prometheus.yml
nginx/: nginx.prod.conf
orthanc-config/: orthanc-standalone.json  orthanc.json
orthanc-sql/: 01-init-orthanc.sql
reports/: .gitignore  2025-07-21-authentication-unicode-error-analysis.md  2025-07-21-complete-authentication-resolution-report.md  2025-07-21-comprehensive-session-summary.md  2025-07-21-final-5whys-analysis.md  2025-07-21-temporary-deactivations-and-restoration-plan.md  2025-07-23-final-system-completion-report.md  2025-07-23-healthcare-security-fixes-implementation-report.md  2025-07-23-orthanc-integration-completion-report.md  2025-07-23-phase-3-4-5-implementation-plan.md  2025-07-23-phase-3-complete-comprehensive-report.md  2025-07-23-security-validation-complete-report.md  2025-07-24-COMPREHENSIVE-IMPLEMENTATION-PLAN.md  2025-07-24-CRITICAL-BACKEND-ANALYSIS-FINDINGS.md  2025-07-24-IMPLEMENTATION-PROGRESS-REPORT.md  2025-07-24-PHASE-4-COMPREHENSIVE-TESTING-PLAN.md  2025-07-24-phase-4-fhir-r4-implementation-report.md  2025-07-24-phase-5-complete-comprehensive-implementation-report.md  2025-07-24-system-status-comprehensive-final-report.md  2025-07-25-COMPREHENSIVE-SECURITY-TESTING-IMPLEMENTATION.md  2025-07-25-IRIS-API-INTEGRATION-TESTING-IMPLEMENTATION.md  2025-07-25-PHASE-4-COMPLIANCE-SECURITY-IMPLEMENTATION-REPORT.md  2025-07-26-ANONYMIZATION-INFRASTRUCTURE-ANALYSIS.md  2025-07-26-COMPREHENSIVE-E2E-TESTING-FINAL-REPORT.md  2025-07-26-ML-AI-IMPLEMENTATION-COMPLETE-REPORT.md  2025-07-26-ML-AI-IMPLEMENTATION-V2-COMPLETE-REPORT.md  2025-07-26-PHASE-4.2-FHIR-R4-COMPLETE-IMPLEMENTATION-REPORT.md  2025-07-26-PREDICTIVE-HEALTHCARE-PLATFORM-INTEGRATION-ANALYSIS.md  2025-07-27-COMPREHENSIVE-IMPLEMENTATION-STATUS-FINAL-REPORT.md  2025-07-27-IMPLEMENTATION-STATUS-ASSESSMENT-REPORT.md  2025-08-02-OWASP-TOP-10-2021-SECURITY-VALIDATION-COMPLETE.md  2025-08-03-ENTERPRISE-HIPAA-COMPLIANCE-ACHIEVEMENT-REPORT.md  2025-08-03-HIPAA-COMPLIANCE-TESTING-COMPLETE-REPORT.md  2025-08-04-ENTERPRISE-HEALTHCARE-COMPLIANCE-COMPLETE-REPORT.md  2025-08-04-ENTERPRISE-HEALTHCARE-COMPLIANCE-FIXES-REPORT.md  2025-08-04-ENTERPRISE-HEALTHCARE-PRODUCTION-CERTIFICATION.md  2025-08-04-ENTERPRISE-SECURITY-PRODUCTION-DEPLOYMENT-STATUS.md  2025-08-04-IRIS-API-TEST-HANGING-ISSUE-RESOLVED.md  2025-08-04-SOC2-COMPLIANCE-100-PERCENT-SUCCESS-REPORT.md  2025-08-05-ENTERPRISE-HEALTHCARE-LOAD-TESTING-SUCCESS-REPORT.md  (+43 more)
scripts/: Download-MedicalDatasets.ps1  README-security-scan.md  README.md  Setup-LoRAEnvironment.ps1  Test-LoRASetup.ps1  Test-RealEnterpriseFunctionality.ps1  Train-MedicalAgent-Fixed.ps1  Train-MedicalAgent.ps1  check_docker_health.ps1  cleanup_database.py  comprehensive-security-scan.ps1  create_test_data_simple.py  deploy-enterprise.ps1  enterprise_cleanup.py  finetune_gemma3n_medical.py  install_dependencies.sh  populate_test_data.py  rebuild_docker.ps1  run_all_verifications.py  run_full_test_suite.ps1  security-check-architecture.ps1  security-validation.ps1  setup_lora_environment.sh  test_api.py  test_api_security.py  test_clinical_workflows.ps1  test_database_connection.py  test_enterprise_health.py  test_enterprise_workflow.py  test_real_enterprise_functionality.py  (+4 more)
(+1217 files in other folders)
